--- a/Dockerfile.toolchain
+++ b/Dockerfile.toolchain
@@ -1,26 +1,29 @@
 FROM scratch
 MAINTAINER Peter Marheine <peter@taricorp.net>
 
-FROM debian:bullseye-slim AS prereqs
+# Use the latest stable version of Debian for the base
+FROM debian:bookworm-slim AS prereqs
 RUN apt-get -qq update
 RUN apt-get -y install build-essential libmpfr-dev libmpc-dev libgmp-dev libpng-dev ppl-dev curl git cmake texinfo
 
+# Update binutils to version 2.41
 FROM prereqs AS binutils
 WORKDIR /
-RUN curl -L http://ftpmirror.gnu.org/binutils/binutils-2.34.tar.bz2 | tar xj
+RUN curl -L http://ftpmirror.gnu.org/binutils/binutils-2.41.tar.bz2 | tar xj
 RUN mkdir build-binutils
 WORKDIR /build-binutils
-RUN ../binutils-2.34/configure --target=sh3eb-elf --disable-nls \
+RUN ../binutils-2.41/configure --target=sh3eb-elf --disable-nls \
         --with-sysroot
 RUN make -j$(nproc)
 RUN make install
 
+# Update GCC to version 13.2.0
 FROM binutils AS gcc
 WORKDIR /
-RUN curl -L http://ftpmirror.gnu.org/gcc/gcc-10.1.0/gcc-10.1.0.tar.xz | tar xJ
+RUN curl -L http://ftpmirror.gnu.org/gcc/gcc-13.2.0/gcc-13.2.0.tar.xz | tar xJ
 RUN mkdir build-gcc
 WORKDIR /build-gcc
-RUN ../gcc-10.1.0/configure --target=sh3eb-elf --with-pkgversion=PrizmSDK \
+RUN ../gcc-13.2.0/configure --target=sh3eb-elf --with-pkgversion=PrizmSDK \
         --without-headers --enable-languages=c,c++ \
         --disable-tls --disable-nls --disable-threads --disable-shared \
         --disable-libssp --disable-libvtv --disable-libada \
@@ -31,6 +34,7 @@ RUN make install-gcc
 RUN make -j$(nproc) inhibit_libc=true all-target-libgcc
 RUN make install-target-libgcc
 
-FROM debian:bullseye-slim
+# Final stage with cleaned-up system
+FROM debian:bookworm-slim
 COPY --from=gcc /usr/local /usr/local
 RUN apt-get -qq update && apt-get -qqy install make libmpc3 && apt-get -qqy clean
